[package]
name = "proc_use"
version = "0.1.0"
authors = ["Shizcow <pohl.devin@gmail.com>"]
edition = "2018"
license = "GPL-3.0+"
description = "Semi-dynamic mod and use"
readme = "README.md"
repository = "https://github.com/Shizcow/proc_use"
keywords = ["mod", "use", "dynamic", "import"]
categories = ["development-tools"]

[dependencies]
proc-macro2 = "1.0.17"
syn = {version = "1.0.23", features = ["full", "extra-traits"]}
quote = "1.0.6"
itertools = "0.9.0"
glob = "0.3.0"