[package]
name = "proc_use"
version = "0.1.1"
authors = ["Shizcow <pohl.devin@gmail.com>", "gluaxspeed <jonathan.t.pavlik@gmail.com>"]
edition = "2018"
license = "GPL-3.0+"
description = "Semi-dynamic mod and use"
readme = "README.md"
repository = "https://github.com/Shizcow/proc_use"
keywords = ["mod", "use", "dynamic", "import"]
categories = ["development-tools"]

[dependencies]
itertools = "0.9.0"
glob = "0.3.0"